закончен блок новостей

--- a/index.html
+++ b/index.html
@@ -179,7 +179,50 @@
         <div class="site-news panel panel-info">
           <div class="panel-heading">Новости сайта</div>
           <div class="panel-body">
-            Panel content
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt=""></div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
           </div>
         </div>
 
