закончен блок рейтинг фильмов

--- a/index.html
+++ b/index.html
@@ -228,8 +228,56 @@
 
         <div class="top-films panel panel-info">
           <div class="panel-heading">Рейтинг фильмов</div>
-          <div class="panel-body">
-            Panel content
+          <div class="top-films__body panel-body">
+            
+            <div class="top-films__list list-group">
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet consectetur.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum, dolor sit amet consectetur adipisicing.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem, ipsum dolor.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet consectetur.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum, dolor sit amet consectetur adipisicing.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem, ipsum dolor.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Loremdghfdghfghfghfgj fgfgfgfgfgh fgfgfgfg fgfg ipsum dolor sit amet consectetur.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum, dolor sit amet consectetur adipisicing.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem, ipsum dolor.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+            </div>
+
           </div>
         </div>
 
