--- a/page.html
+++ b/page.html
@@ -4,13 +4,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>КиноЗал</title>
   <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=PT+Serif:wght@400;700&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
   <!--[if lt IE 9]>
@@ -21,10 +20,409 @@
 
 <body>
 
+  <header class="header">
+    <div class="header-logo">
+      <div class="container">
 
-<script src="libs/jquery/dist/jquery.min.js"></script>
-<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+        <strong class="header-logo__title">КиноЗал</strong>
+        <span class="header-logo__description">Найди свое кино</span>
+      </div>
+    </div>
+
+    <div class="header-menu">
+      <nav class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-top"
+              aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+
+          </div>
+
+          <div class="collapse navbar-collapse" id="navbar-top">
+            <ul class="nav navbar-nav navbar-left">
+              <li ><a href="index.html">Главная<span class="sr-only">(current)</span></a></li>
+              <li class="active"><a href="#">Фильмы</a></li>
+              <li><a href="#">Сериалы</a></li>
+              <li><a href="#">Контакты</a></li>
+
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Новинки</a></li>
+              <li><a href="#">Рейтинг</a></li>
+              <li><a href="#">Раздачи</a></li>
+            </ul>
+
+      </nav>
+    </div>
+  </header>
+
+  <div class="container">
+    <div class="row">
+
+      <main class="main col-lg-9 col-lg-push-3 col-md-8 col-md-push-4">
+
+        <section class="site-search panel panel-info visible-sm visible-xs">
+          <div class="panel-heading">Поиск</div>
+          <div class="panel-body">
+
+            <form action="search">
+              <div class="input-group input-group-lg">
+                <input class="form-control" name="search" type="search" placeholder="Поиск по сайту">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="submit"><span
+                      class="glyphicon glyphicon-search"></span></button>
+                </span>
+              </div>
+            </form>
+          </div>
+        </section>
+
+        <section class="user-login panel panel-info visible-sm visible-xs">
+          <div class="panel-heading">Пользователь</div>
+          <div class="panel-body">
+
+            <!-- Nav tabs -->
+            <ul class="user-login__tabs nav nav-tabs" role="tablist">
+              <li role="presentation" class="active">
+                <a href="#user-login-main" aria-controls="user-login-main" role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-log-in"></span>
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="#user-registration-main" aria-controls="user-registration-main" role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-user"></span>
+                </a>
+              </li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="user-login__content tab-content">
+              <div role="tabpanel" class="tab-pane fade in active" id="user-login-main">
+                <form action="login">
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="text" placeholder="Логин">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="password" placeholder="Пароль">
+                  </div>
+                  <button class="btn btn-default btn-block btn-lg" type="submit">Вход</button>
+                </form>
+              </div>
+
+              <div role="tabpanel" class="tab-pane fade" id="user-registration-main">
+                <form action="registration">
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="text" placeholder="Логин">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="password" placeholder="Пароль">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="email" placeholder="Email">
+                  </div>
+                  <button class="btn btn-default btn-block btn-lg" type="submit">Регистрация</button>
+                </form>
+              </div>
+            </div>
+
+          </div>
+        </section>
+
+
+      </main>
+
+      <aside class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
+
+        <div class="vertical-slider panel panel-info visible-lg visible-md">
+
+          <div id="vertical-carousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#vertical-carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#vertical-carousel" data-slide-to="1"></li>
+              <li data-target="#vertical-carousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+
+              <div class="item active">
+                <img class="vertical-slider__img" src="assets/img/films/1263242.jpg" alt="Film title">
+              </div>
+
+              <div class="item">
+                <img class="vertical-slider__img" src="assets/img/films/1266931.jpg" alt="Film title">
+              </div>
+
+              <div class="item">
+                <img class="vertical-slider__img" src="assets/img/films/1289488.jpg" alt="Film title">
+              </div>
+
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#vertical-carousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#vertical-carousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+        </div>
+
+        <div class="site-search panel panel-info visible-lg visible-md">
+          <div class="panel-heading">Поиск</div>
+          <div class="panel-body">
+
+            <form action="search">
+              <div class="input-group input-group-lg">
+                <input class="form-control" name="search" type="search" placeholder="Поиск по сайту">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="submit"><span
+                      class="glyphicon glyphicon-search"></span></button>
+                </span>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div class="user-login panel panel-info visible-lg visible-md">
+          <div class="panel-heading">Пользователь</div>
+          <div class="panel-body">
+
+            <!-- Nav tabs -->
+            <ul class="user-login__tabs nav nav-tabs" role="tablist">
+              <li role="presentation" class="active">
+                <a href="#user-login-sidebar" aria-controls="user-login-sidebar" role="tab" data-toggle="tab">
+                  <span class="glyphicon glyphicon-log-in"></span>
+                </a>
+              </li>
+              <li role="presentation">
+                <a href="#user-registration-sidebar" aria-controls="user-registration-sidebar" role="tab"
+                  data-toggle="tab">
+                  <span class="glyphicon glyphicon-user"></span>
+                </a>
+              </li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="user-login__content tab-content">
+              <div role="tabpanel" class="tab-pane fade in active" id="user-login-sidebar">
+                <form action="login">
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="text" placeholder="Логин">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="password" placeholder="Пароль">
+                  </div>
+                  <button class="btn btn-default btn-block btn-lg" type="submit">Вход</button>
+                </form>
+              </div>
+
+              <div role="tabpanel" class="tab-pane fade" id="user-registration-sidebar">
+                <form action="registration">
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="text" placeholder="Логин">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="password" placeholder="Пароль">
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control input-lg" type="email" placeholder="Email">
+                  </div>
+                  <button class="btn btn-default btn-block btn-lg" type="submit">Регистрация</button>
+                </form>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="site-news panel panel-info">
+          <div class="panel-heading">Новости сайта</div>
+          <div class="panel-body">
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+            <div class="site-news-item">
+              <div class="site-news-item__thumbnail thumbnail">
+                <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
+              </div>
+              <div class="site-news-item__title">
+                <a class="site-news-item__link" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  dolorem laborum expedita iure qui inventore.</a>
+              </div>
+              <div class="site-news-item__date">12 июня 2021</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="top-films panel panel-info">
+          <div class="panel-heading">Рейтинг фильмов</div>
+          <div class="top-films__body panel-body">
+
+            <div class="top-films__list list-group">
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet consectetur.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum, dolor sit amet consectetur adipisicing.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem, ipsum dolor.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet consectetur.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum, dolor sit amet consectetur adipisicing.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem, ipsum dolor.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Loremdghfdghfghfghfgj fgfgfgfgfgh fgfgfgfg fgfg ipsum
+                dolor sit amet consectetur.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum dolor sit amet.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem ipsum, dolor sit amet consectetur adipisicing.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+              <a class="top-films__item list-group-item" href="#">Lorem, ipsum dolor.
+                <span class="top-films__badge badge">9.1</span>
+              </a>
+            </div>
+
+          </div>
+        </div>
+
+      </aside>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+
+        <div class="footer-group col-md-3 col-xs-6">
+          <h4 class="footer-group__title">Lorem ipsum dolor sit.</h4>
+          <ul class="footer-group__list">
+            <li><a class="footer-group__link" href="">Lorem ipsum dolor.</a></li>
+            <li><a class="footer-group__link" href="">Delectus, labore, incidunt.</a></li>
+            <li><a class="footer-group__link" href="">Eos neque, eius.</a></li>
+            <li><a class="footer-group__link" href="">Minus, omnis vel.</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-group col-md-3 col-xs-ul">
+          <h4 class="footer-group__title">Voluptatem, commodi, at.</h4>
+          <ul class="footer-group__list">
+            <li><a class="footer-group__link" href="">Lorem ipsum dolor.</a></li>
+            <li><a class="footer-group__link" href="">Delectus, labore, incidunt.</a></li>
+            <li><a class="footer-group__link" href="">Eos neque, eius.</a></li>
+            <li><a class="footer-group__link" href="">Minus, omnis vel.</a></li>
+            <li><a class="footer-group__link" href="">Aspernatur, fugiat, possimus!</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-group col-md-3 col-xs-6">
+          <h4 class="footer-group__title">Sed, ducimus perspiciatis.</h4>
+          <ul class="footer-group__list">
+            <li><a class="footer-group__link" href="">Lorem ipsum dolor.</a></li>
+            <li><a class="footer-group__link" href="">Delectus, labore, incidunt.</a></li>
+            <li><a class="footer-group__link" href="">Eos neque, eius.</a></li>
+            <li><a class="footer-group__link" href="">Minus, omnis vel.</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-group col-md-3 col-xs-6">
+          <h4 class="footer-group__title">Reiciendis, minima, a?</h4>
+          <ul class="footer-group__list">
+            <li><a class="footer-group__link" href="">Lorem ipsum dolor.</a></li>
+            <li><a class="footer-group__link" href="">Delectus, labore, incidunt.</a></li>
+            <li><a class="footer-group__link" href="">Eos neque, eius.</a></li>
+            <li><a class="footer-group__link" href="">Minus, omnis vel.</a></li>
+            <li><a class="footer-group__link" href="">Aspernatur, fugiat, possimus!</a></li>
+          </ul>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="footer__main col-xs-12">
+          <a href="https://fomenko.top/">
+            <strong>
+              Учебный шаблон Bootstrap v3.4.1. Разработка - Андрей Фоменко</strong></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="libs/jquery/dist/jquery.min.js"></script>
+  <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
-
