--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
               </div>
               <div class="site-news-item__title">
-                <a class="site-news-item__link" href="">Мы запустили новый сервис-...</a>
+                <a class="site-news-item__link" href="">Мы запустили новый сервис-Киномонстр</a>
               </div>
               <div class="site-news-item__date">5 декабря 2016</div>
             </div>
@@ -614,7 +614,7 @@
                 <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
               </div>
               <div class="site-news-item__title">
-                <a class="site-news-item__link" href="">Скорость скачивания...</a>
+                <a class="site-news-item__link" href="">Скорость скачивания фильмов увеличена</a>
               </div>
               <div class="site-news-item__date">7 декабря 2016</div>
             </div>
@@ -623,7 +623,7 @@
                 <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
               </div>
               <div class="site-news-item__title">
-                <a class="site-news-item__link" href="">Оптимизирована производительность...</a>
+                <a class="site-news-item__link" href="">Оптимизирована производительность сервера</a>
               </div>
               <div class="site-news-item__date">8 декабря 2016</div>
             </div>
@@ -632,7 +632,7 @@
                 <img class="site-news-item__image" src="assets/img/75x75.png" alt="">
               </div>
               <div class="site-news-item__title">
-                <a class="site-news-item__link" href="">Количество пользователей...</a>
+                <a class="site-news-item__link" href="">Количество пользователей перевалило за 10 000</a>
               </div>
               <div class="site-news-item__date">9 декабря 2016</div>
             </div>
